{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 206,
  "lineage": "0b2b9385-2917-26a5-d996-236a09e56e1e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027cbc674a0bf8cc6",
            "arn": "arn:aws:ec2:us-east-1:546155105753:elastic-ip/eipalloc-027cbc674a0bf8cc6",
            "association_id": "eipassoc-012387e62f33286c9",
            "domain": "vpc",
            "id": "eipalloc-027cbc674a0bf8cc6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02024dc6317efd225",
            "private_dns": "ip-10-0-1-234.ec2.internal",
            "private_ip": "10.0.1.234",
            "public_dns": "ec2-54-198-85-160.compute-1.amazonaws.com",
            "public_ip": "54.198.85.160",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f9095aa2361ea8e",
            "arn": "arn:aws:ec2:us-east-1:546155105753:elastic-ip/eipalloc-09f9095aa2361ea8e",
            "association_id": "eipassoc-0681c8d2e9626601c",
            "domain": "vpc",
            "id": "eipalloc-09f9095aa2361ea8e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c49a3c6e546f1e95",
            "private_dns": "ip-10-0-2-194.ec2.internal",
            "private_ip": "10.0.2.194",
            "public_dns": "ec2-54-158-155-139.compute-1.amazonaws.com",
            "public_ip": "54.158.155.139",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:546155105753:internet-gateway/igw-0e1ff46f0fd72b524",
            "id": "igw-0e1ff46f0fd72b524",
            "owner_id": "546155105753",
            "tags": {
              "Name": "skycast-eks-prod-igw"
            },
            "tags_all": {
              "Name": "skycast-eks-prod-igw"
            },
            "vpc_id": "vpc-08642249e63964b87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027cbc674a0bf8cc6",
            "association_id": "eipassoc-012387e62f33286c9",
            "connectivity_type": "public",
            "id": "nat-0bc90037adb55d2de",
            "network_interface_id": "eni-02024dc6317efd225",
            "private_ip": "10.0.1.234",
            "public_ip": "54.198.85.160",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0edc1b901fe102943",
            "tags": {
              "Name": "skycast-eks-prod-nat-gw-0"
            },
            "tags_all": {
              "Name": "skycast-eks-prod-nat-gw-0"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f9095aa2361ea8e",
            "association_id": "eipassoc-0681c8d2e9626601c",
            "connectivity_type": "public",
            "id": "nat-0ccb5a1f5afcbda95",
            "network_interface_id": "eni-0c49a3c6e546f1e95",
            "private_ip": "10.0.2.194",
            "public_ip": "54.158.155.139",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06077832e54c54abf",
            "tags": {
              "Name": "skycast-eks-prod-nat-gw-1"
            },
            "tags_all": {
              "Name": "skycast-eks-prod-nat-gw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:546155105753:route-table/rtb-0fad5a46811b4e9a5",
            "id": "rtb-0fad5a46811b4e9a5",
            "owner_id": "546155105753",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bc90037adb55d2de",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "skycast-eks-prod-private-rt-0"
            },
            "tags_all": {
              "Name": "skycast-eks-prod-private-rt-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-08642249e63964b87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:546155105753:route-table/rtb-0174de57e42d3b5ed",
            "id": "rtb-0174de57e42d3b5ed",
            "owner_id": "546155105753",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ccb5a1f5afcbda95",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "skycast-eks-prod-private-rt-1"
            },
            "tags_all": {
              "Name": "skycast-eks-prod-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08642249e63964b87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:546155105753:route-table/rtb-08ac48acb622909fe",
            "id": "rtb-08ac48acb622909fe",
            "owner_id": "546155105753",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1ff46f0fd72b524",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "skycast-eks-prod-public-rt"
            },
            "tags_all": {
              "Name": "skycast-eks-prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08642249e63964b87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afb381ff380fee8d",
            "route_table_id": "rtb-0fad5a46811b4e9a5",
            "subnet_id": "subnet-0623dba9d629a4d41"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc3de24d454bdbf6",
            "route_table_id": "rtb-0174de57e42d3b5ed",
            "subnet_id": "subnet-0c2c6bafb5917931e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0603d867dce59ba9c",
            "route_table_id": "rtb-08ac48acb622909fe",
            "subnet_id": "subnet-0edc1b901fe102943"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00df38b8da36d9787",
            "route_table_id": "rtb-08ac48acb622909fe",
            "subnet_id": "subnet-06077832e54c54abf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:546155105753:subnet/subnet-0623dba9d629a4d41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0623dba9d629a4d41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "546155105753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "skycast-eks-prod-private-subnet-0",
              "kubernetes.io/cluster/skycast-eks-prod": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "skycast-eks-prod-private-subnet-0",
              "kubernetes.io/cluster/skycast-eks-prod": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08642249e63964b87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:546155105753:subnet/subnet-0c2c6bafb5917931e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2c6bafb5917931e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "546155105753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "skycast-eks-prod-private-subnet-1",
              "kubernetes.io/cluster/skycast-eks-prod": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "skycast-eks-prod-private-subnet-1",
              "kubernetes.io/cluster/skycast-eks-prod": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08642249e63964b87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:546155105753:subnet/subnet-0edc1b901fe102943",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edc1b901fe102943",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "546155105753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "skycast-eks-prod-public-subnet-0",
              "kubernetes.io/cluster/skycast-eks-prod": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "skycast-eks-prod-public-subnet-0",
              "kubernetes.io/cluster/skycast-eks-prod": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08642249e63964b87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:546155105753:subnet/subnet-06077832e54c54abf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06077832e54c54abf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "546155105753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "skycast-eks-prod-public-subnet-1",
              "kubernetes.io/cluster/skycast-eks-prod": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "skycast-eks-prod-public-subnet-1",
              "kubernetes.io/cluster/skycast-eks-prod": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08642249e63964b87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:546155105753:vpc/vpc-08642249e63964b87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071e26c2237c7ee36",
            "default_route_table_id": "rtb-080fb9ab78484f8f1",
            "default_security_group_id": "sg-0fb42b9f1d1dafaa5",
            "dhcp_options_id": "dopt-094acc22555c7d040",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08642249e63964b87",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-080fb9ab78484f8f1",
            "owner_id": "546155105753",
            "tags": {
              "Name": "skycast-eks-prod-vpc",
              "kubernetes.io/cluster/skycast-eks-prod": "owned"
            },
            "tags_all": {
              "Name": "skycast-eks-prod-vpc",
              "kubernetes.io/cluster/skycast-eks-prod": "owned"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}